2002-12-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c: (rename_callback),
	(update_info_internal): Moved the display name invalidation 
	from update_info_internal to rename_callback.

2002-12-03  Alexander Larsson  <alexl@redhat.com>

	* nautilus.desktop.in:
	* src/nautilus-server-connect.desktop.in:
	Add X-GNOME-Bugzilla lines.
	Patch from Fernando Herrera <fherrera@onirica.com>

2002-12-02  Alexander Larsson  <>

	* libnautilus-private/nautilus-thumbnails.c (thumbnail_thread_starter_cb):
	Allocate 128K thread stack. Patch from marcus@freebsd.org. (#99917)

2002-11-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas:
	Make treeview show_only_directories default to TRUE.
	Patch from MArk Finlay <sisob@eircom.net>

	* src/file-manager/fm-properties-window.[ch]:
	Make window not dialog,
	patch from David Emory Watson <dwatson@cs.ucr.edu>
	Center window on mouse at popup.

2002-11-28  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/nautilus-directory-view-ui.xml: 
	Add gtk-properties stock pixmap to menus.
	
2002-11-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas:
	Make show_special_flags default to TRUE, since we removed
	the prefs from the ui.

	* libnautilus-private/nautilus-icon-container.c:
	query-drag with middle button. Open context menus faster. (#46276)
	Patch by Marco Pesenti Gritti.

2002-11-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c:
	Do linking instead of copying for burn:. I accidentally
	checked in this code some days ago.

=== nautilus 2.1.3 ===

2002-11-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	Bump to 2.1.3

2002-11-24  Dave Camp  <dave@ximian.com>

	* configure.in: Remove sample and loser from the build.

2002-11-21  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-background.c: