@@ -1,5 +1,11 @@
 2002-12-03  Dave Camp  <dave@ximian.com>
 
+	* libnautilus-private/nautilus-file.c (update_info_internal): 
+	Removed unused code that should have been removed in the last 
+	commit.
+
+2002-12-03  Dave Camp  <dave@ximian.com>
+
 	* libnautilus-private/nautilus-file.c: (rename_callback),
 	(update_info_internal): Moved the display name invalidation 
 	from update_info_internal to rename_callback.
